src/test/deca/codegen/valid/assign-intoCall.deca
class A{
	void call() {
		println("Yes");
	}
}

{
	A a;
	(a = new A()).call();
}
