src/test/deca/codegen/invalid/dereferencementNull.deca
class A{
	void call(){}
}

{
	A a = null;
	a.call();
}
